log/build_2022-10-15_19-34-07/py_pubsub/stderr.log
  File "/home/hts/Skillex/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/speech2text.py", line 15
    from
        ^
SyntaxError: invalid syntax

